metadata/objects/Performer__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>ClubEvent__c</referenceTo>
        <relationshipLabel>Performers</relationshipLabel>
        <relationshipName>Performers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rock &amp; Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Youtube_URL__c</fullName>
        <label>Youtube URL</label>
        <type>Url</type>
    </fields>
    <label>Performer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Youtube_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>